# bijukaru

./: .gitignore  Pipfile  README.md  SYNC_SETUP.md  apod.py  gemini_structured_output.py  guardian_photos.py  llm_research.py  main.py  models.py  pyproject.toml  reddit.py  reddit_models.py  requirements.txt  schema.py  thisiscolossal.py  ukiyoe.py  vercel.json  wikiart.py
cloudflare-worker/: .gitignore  package.json  tsconfig.json  wrangler.toml
cloudflare-worker/src/: index.ts  types.d.ts
data/: ukiyoe_sources.json
frontend/: README.md  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: utils.ts
frontend/src/lib/components/: GalleryState.svelte.ts
frontend/src/lib/sync/: SyncService.ts
frontend/src/routes/: +layout.svelte  +page.svelte
static/spa/: index.html
static/spa/_app/: version.json
static/spa/_app/immutable/assets/: 0.BKp-FyrX.css  0.BxsLH0Y7.css  0.Dq0J7WBT.css  0.Fz5GpLup.css  2.Bw8x5giX.css  _layout.Ao-l_9Xt.css  _layout.BHMf284Y.css  _layout.DtF7SGC-.css  _layout.XkV9ijTf.css
static/spa/_app/immutable/chunks/: B2CFTmFq.js  BO7OcNel.js  BiK2Jge1.js  C0QaH9dC.js  C5k1qbv7.js  COqvbv4a.js  CeNOUQ2E.js  CkaAntYN.js  D4KI4Ps9.js  Da4LftP9.js  Dcrd0H1f.js  G9U9jTfR.js
static/spa/_app/immutable/entry/: app.BCLhyHYZ.js  app.BQ2aysPf.js  app.C0L8JMoG.js  app.CE64ybji.js  app.D6Lxwlt6.js  app.EaFZqP0l.js  app.IF4kz2gO.js  start.BMQlvL-Y.js  start.BizlS6Jw.js  start.C1yHmAqU.js  start.CWgeqDvm.js  start.Cn3N4wP3.js  start.DG1cf5LL.js  start.VVcd4766.js
templates/: index.html
(+15 files in other folders)
