[project]
name = "bijukaru"
version = "0.1.0"
description = "Simple carousel gallery for art images, suitable for embedding on other websites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi-cache2[memcache]>=0.2.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.34.2",
    "itsdangerous>=2.2.0",
]
