[project]
name = "bijukaru"
version = "0.1.0"
description = "Simple carousel gallery for art images, suitable for embedding on other websites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.34.2",
    "itsdangerous>=2.2.0",
    "requests>=2.32.3",
    "orjson>=3.10.16",
    "pydantic-ai>=0.1.8",
    "dateparser>=1.2.1",
]
